--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "rxjs": "6.3.2",
-    "jquery": "3.3.1",
-    "core-js": "2.5.7",
-    "zone.js": "0.8.26",
-    "bootstrap": "4.1.3",
-    "popper.js": "1.14.4",
-    "@angular/core": "6.1.7",
-    "@angular/forms": "6.1.7",
-    "@angular/common": "6.1.7",
-    "@angular/router": "6.1.7",
-    "@angular/compiler": "6.1.7",
-    "@angular/platform-browser": "6.1.7",
-    "@angular/platform-browser-dynamic": "6.1.7"
+    "@angular/animations": "14.0.1",
+    "@angular/common": "^14.0.1",
+    "@angular/compiler": "^14.0.1",
+    "@angular/core": "^14.0.1",
+    "@angular/forms": "^14.0.1",
+    "@angular/platform-browser": "^14.0.1",
+    "@angular/platform-browser-dynamic": "^14.0.1",
+    "@angular/router": "^14.0.1",
+    "@popperjs/core": "^2.10.2",
+    "bootstrap": "^5.1.3",
+    "core-js": "^3.22.8",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "rxjs": "^7.5.5",
+    "zone.js": "^0.11.5"
   },
   "scripts": {
     "ng": "ng",
