--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "14.0.1",
-    "@angular/common": "^14.0.1",
-    "@angular/compiler": "^14.0.1",
-    "@angular/core": "^14.0.1",
-    "@angular/forms": "^14.0.1",
-    "@angular/platform-browser": "^14.0.1",
-    "@angular/platform-browser-dynamic": "^14.0.1",
-    "@angular/router": "^14.0.1",
-    "@popperjs/core": "^2.10.2",
-    "bootstrap": "^5.1.3",
+    "@angular/common": "14.0.1",
+    "@angular/compiler": "14.0.1",
+    "@angular/core": "14.0.1",
+    "@angular/forms": "14.0.1",
+    "@angular/platform-browser": "14.0.1",
+    "@angular/platform-browser-dynamic": "14.0.1",
+    "@angular/router": "14.0.1",
+    "@popperjs/core": "2.11.5",
+    "bootstrap": "5.1.3",
     "core-js": "^3.22.8",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1",
-    "rxjs": "^7.5.5",
-    "zone.js": "^0.11.5"
+    "jquery": "3.6.0",
+    "popper.js": "1.16.1",
+    "rxjs": "7.5.5",
+    "zone.js": "0.11.5"
   },
   "scripts": {
     "ng": "ng",
